--- a/css/style.css
+++ b/css/style.css
@@ -170,9 +170,36 @@ body {
   margin: 10px auto;
   font-size: 18px;
   padding: 12px 28px;
-  border: 1px solid #fff;
+  border: 2px solid #fff;
   font-family: 'PT Sans', sans-serif;
   text-transform: uppercase;
+  position: relative;
+  overflow: hidden;
+  -webkit-transition: 0.4s cubic-bezier(1, 0.01, 0.61, 0.84);
+  transition: 0.4s cubic-bezier(1, 0.01, 0.61, 0.84);
+}
+
+.btn::before {
+  -webkit-transition: 0.4s cubic-bezier(1, 0.01, 0.61, 0.84);
+  transition: 0.4s cubic-bezier(1, 0.01, 0.61, 0.84);
+  content: '';
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  height: 0;
+  z-index: -1;
+}
+
+.btn:hover {
+  color: #000;
+}
+
+.btn:hover:before {
+  height: 100%;
 }
 
 .banner__offer {
